--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@supermap/vue-iclient-leaflet": "^10.0.1",
+    "axios": "^0.19.2",
     "echarts": "^4.7.0",
     "vant": "^2.5.7",
+    "videojs-flash": "^2.2.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -34,7 +38,6 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
-    "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -42,7 +45,8 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
-    "sass-loader": "^8.0.2",
+    "sass": "^1.26.3",
+    "sass-loader": "^7.3.1",
     "sass-resources-loader": "^2.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
